--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <footer>
             <center>
-                <p>Copyrights &copy; 2016-2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
+                <p>Copyrights &copy; 2017 <a href="https://factsfinder.me" style="text-decoration:none;">factsfinder.me</a> | All Rights Reserved </p>
                 <p>Designed and Developed by Me..!</p>
             </center>
         </footer>
