--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="container intro">
                 <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer at first and a Computer Science Graduate later. I mostly code in Python, JavaScript. 
-                    I'm also a big fan of React and React native. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth. At present, I'm trying to build my own Jarvis like Virtual Assistant named "Lucifer".
+                    I'm a big fan of React and React native. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth.
             </div>
 
             <center>
