--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>holla, mine own nameth is Phanindra Veera. I'm a self taught programmer at first and a Computer Science Graduate later. I mostly code in Python, JavaScript. 
-                    I'm a big fan of React and React native. I'm also an aspiring entrepreneur and Future's Richest Man on the Earth.
+                <p>Hello, my name is Phanindra Veera. I'm a self taught programmer at first and a Computer Science Graduate later. I mostly code in Python, JavaScript. 
+                    I'm a big fan of React and React native. I'm also an aspiring entrepreneur and I love open source.
             </div>
 
             <center>
