--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="content-main">
 
             <div class="container intro">
-                <p>Hello, my name is Phanindra Veera. I'm a self taught programmer at first and a Computer Science Graduate later. I mostly code in Python, JavaScript. 
-                    I'm a big fan of Elixir and React. I'm also an aspiring entrepreneur and I love open source. Oh, by the way, I'll be the richest person in the world.
+                <p>Hello, my name is Phanindra Veera. I'm a self taught programmer at first and a Computer Science Graduate later. I mostly code in Elixir and JavaScript. 
+                    I'm a big fan of React and React Native. I'm also an aspiring entrepreneur and I love open source. Oh, by the way, I'll be the richest person in the world.
             </div>
 
             <center>
