--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <div class="col-md-4">
                         <div class="block b4">
-                            <h1 style="text-align:center"><a href="https://drive.google.com/file/d/1zsLGJ3uALs-D10B_vg2GtNzW2fqq1J5Q/view?usp=sharing">Resume</a></h1>
+                            <h1 style="text-align:center"><a href="https://docs.google.com/document/d/1DP5e1c-n33rKBn_D1lEy1XdE7JygSU8-8e8Uc7MsaHQ/edit?usp=sharing">Resume</a></h1>
                         </div>
                     </div>
                 </div>
