--- a/projects.html
+++ b/projects.html
@@ -157,7 +157,7 @@
                     <div class="modal-body">
                         <p class="lead">This is a personal project. It is developed in ReactJs and Redux. This application lists out
 the number of earthquakes happened around the world in the past hour, day, week and month based on user choice. A chart representing the earthquakes based on their magnitudes along with the earthquakes list will be displayed inside the application.</p>
-                        <p class="lead"><a href="https://quakerapp.herokuapp.com" target="_blank">Quaker Demo</a></p>
+                        <p class="lead"><a href="https://factsfinder.github.io/quaker/" target="_blank">Quaker Demo</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
