--- a/index.html
+++ b/index.html
@@ -49,27 +49,14 @@
                     I'm a big fan of React and React Native. I'm also an aspiring entrepreneur and I love open source. Oh, by the way, I'll be the richest person in the world.
             </div>
 
-            <center>
+            
                 <div class="container row blocks">
                     <div class="col-md-4">
-                        <div class="block b2">
-                            <h1 style="text-align:center"><a href="https://factsfinder.me/blog">Blog</a></h1>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="block b2">
-                            <h1 style="text-align:center"><a href="projects.html">Projects</a></h1>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="block b4">
+                        <div class="b4">
                             <h1 style="text-align:center"><a href="https://docs.google.com/document/d/1DP5e1c-n33rKBn_D1lEy1XdE7JygSU8-8e8Uc7MsaHQ/edit?usp=sharing">Resume</a></h1>
                         </div>
                     </div>
                 </div>
-            </center>
 
             <div class="container">
                                 <hr>
